--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,28 @@
 <h1>New User</h1>
 
-<form accept-charset="UTF-8" action="/users" method ="POST">
-
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-
-  <label for"username">Username</label>
+<%# <form accept-charset="UTF-8" action="/users" method ="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %> 
+  <%# <label for"username">Username</label>
   <input type="text" id="username" name="user[username]">
   <br>
-
   <label for"emai">Email</label>
   <input type="email" id="email" name="user[email]"> 
   <br>
-
   <label for"password>Password</label>
   <input type="password" id="password" name="user[password]">
   <br>
-
   <input type="submit" value="Submit">
+</form> %> 
 
-</form>
+<%= form_tag("/users", method: "post") do %>
+  <%= label_tag(:username, "Username: ") %>
+  <%= text_field_tag(:username) %>
+  <br>
+  <%= label_tag(:email, "Email: ") %>
+  <%= email_field_tag(:email) %>
+  <br>
+  <%= label_tag(:password, "Password: ") %>
+  <%= password_field_tag(:password) %>
+  <br>
+  <%= submit_tag("Submit") %>
+<% end %>
