--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
   <input type="submit" value="Submit">
 </form> %> 
 
-<%= form_tag("/users", method: "post") do %>
+<!-- <%= form_tag("/users", method: "post") do %>
   <%= label_tag(:username, "Username: ") %>
   <%= text_field_tag(:username) %>
   <br>
@@ -25,4 +25,11 @@
   <%= password_field_tag(:password) %>
   <br>
   <%= submit_tag("Submit") %>
+<% end %> -->
+
+<%= form_for @user do |f| %>
+  Username <%= f.text_field :username %><br />
+  Email <%= f.email_field :email %><br />
+  Password <%= f.password_field :password %><br />
+  <%= f.submit %>
 <% end %>
