Converts form to partial and renders to new/edit - Displays error messages in form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,9 @@
 <%= form_for(@user, html: {multipart: true}) do |f| %>
+<ul>
+  <% @user.errors.full_messages.each do |error| %>
+    <li><%= error %></li>
+  <% end %>
+</ul>
   Username <%= f.text_field :username %><br />
   Email <%= f.email_field :email %><br />
   Password <%= f.password_field :password %><br />
