--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,3 @@
 <h1>Edit User</h1>
 
-<%= form_for(@user, html: {multipart: true}) do |f| %>
-  Username <%= f.text_field :username %><br />
-  Email <%= f.email_field :email %><br />
-  Password <%= f.password_field :password %><br />
-  <%= f.submit %>
-<% end %>
+<%= render partial: "form" %>
