--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,9 +27,4 @@
   <%= submit_tag("Submit") %>
 <% end %> -->
 
-<%= form_for @user do |f| %>
-  Username <%= f.text_field :username %><br />
-  Email <%= f.email_field :email %><br />
-  Password <%= f.password_field :password %><br />
-  <%= f.submit %>
-<% end %>
+<%= render partial: "form"%>
